<resources>
    <string name="app_name">Movies Database</string>
    <string name="check_internet_connection">შეამოწმეთ ინტერნეტთან კავშირი</string>
    <string name="try_again">სცადეთ თავიდან</string>
    <string name="rating">რეიტინგი</string>
    <string name="date">თარიღი</string>
    <string name="length">ხანგრძლივობა</string>
    <string name="details">დეტალები</string>
    <string name="similar">მსგავსი</string>
    <string name="overview">შინაარსი</string>
    <string name="genres">ჟანრები</string>
    <string name="seasons">სეზონი</string>
    <string name="episodes">ეპიზოდი</string>
    <string name="search_tv_shows">მოძებნმეთ სერიალები</string>
</resources>