<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/_1d1d1d">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button_icon"/>

        </LinearLayout>

        <com.lukakrodzaia.moviesdatabase.customviews.CustomSearchInput
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/_282828"
            android:paddingHorizontal="10dp"
            android:hint="@string/search_tv_shows"
            android:textColorHint="@color/_8b8b8b"
            android:textColor="@color/_e2e2e2"
            android:drawableEnd="@drawable/search_icon"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:clipToPadding="false"
        android:paddingBottom="75dp"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="-75dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/check_internet_connection"
            android:textColor="@color/_e2e2e2"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/_00A661"
            android:text="@string/try_again"
            android:letterSpacing="0"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>