<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible"
        tools:visibility="gone"/>

    <LinearLayout
        android:id="@+id/no_internet"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="-75dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/check_internet_connection"
            android:textColor="@color/_e2e2e2"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/try_again"
            android:letterSpacing="0"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:expanded="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="120dp"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/title_cover"
                    android:layout_width="match_parent"
                    android:layout_height="345dp"
                    android:src="@drawable/no_poster"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cover_background"/>

                <TextView
                    android:id="@+id/title_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="25dp"
                    android:textColor="@color/_e2e2e2"
                    tools:text="Title"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="28sp"
                    android:gravity="bottom"
                    android:layout_alignParentBottom="true" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/button_background"
                android:layout_marginStart="10dp"
                android:translationZ="0.5dp"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_button_icon"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_background"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/single_title_favorite_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share_button_icon"
                    android:visibility="visible"
                    tools:visibility="visible"/>

            </LinearLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollable_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:padding="10dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/title_details_background"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/hr_line"
                    android:layout_width="100dp"
                    android:background="@color/_e2e2e2"
                    android:layout_height="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.lukakrodzaia.moviesdatabase.customviews.CTitleDetailView
                    android:id="@+id/title_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:detailName="@string/rating"
                    app:layout_constraintEnd_toStartOf="@+id/title_date"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hr_line"
                    tools:detailInfo="9.0" />

                <com.lukakrodzaia.moviesdatabase.customviews.CTitleDetailView
                    android:id="@+id/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:detailName="@string/date"
                    app:layout_constraintEnd_toStartOf="@+id/title_length"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title_rating"
                    app:layout_constraintTop_toBottomOf="@id/hr_line"
                    tools:detailInfo="1970-02-07" />

                <com.lukakrodzaia.moviesdatabase.customviews.CTitleDetailView
                    android:id="@+id/title_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:detailName="@string/length"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title_date"
                    app:layout_constraintTop_toBottomOf="@id/hr_line"
                    tools:detailInfo="52 წთ." />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/transparent"
                    app:tabRippleColor="@color/transparent"
                    app:tabIndicatorColor="@color/_00A661"
                    app:tabIndicatorHeight="4dp"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/tab_text"
                    app:tabTextColor="@color/_e2e2e2"
                    app:tabMaxWidth="0dp"
                    app:tabGravity="fill"
                    app:tabMode="fixed"
                    app:layout_constraintTop_toBottomOf="@id/title_rating"/>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="110dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>